New runner import.

--- a/package.json
+++ b/package.json
@@ -1,29 +1,44 @@
 {
   "name": "graphene-marionette-runner",
-  "license": "MPL",
   "version": "0.0.1",
   "author": {
-    "name": "Kevin Grandon",
-    "email": "kevingrandon@yahoo.com"
-  },
-  "dependencies": {
-    "debug": "2.2.0",
-    "promise": "7.0.1",
-    "mozilla-runner": "0.5.0"
-  },
-  "devDependencies": {
-    "chai": "2.3.0",
-    "empty-port": "0.0.1",
-    "marionette-js-runner": "1.0.15",
-    "mocha": "2.2.4",
-    "mozilla-download": "1.0.5",
-    "node-static": "0.7.6"
+    "name": "The Graphene Team"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/KevinGrandon/graphene-marionette-runner.git"
+    "url": "git://github.com/KevinGrandon/graphene-marionette-runner.git"
   },
-  "scripts": {
-    "test": "make test"
+  "description": "Scripts to run marionette tests on top of graphene",
+  "license": "MIT",
+  "bin": {
+    "marionette-mocha": "./bin/marionette-mocha",
+    "apply-manifest": "./bin/apply-manifest"
+  },
+  "dependencies": {
+    "argparse": "^0.1.15",
+    "array-difference": "0.0.1",
+    "commander": "~1.3",
+    "debug": "*",
+    "empty-port": "~0.0.1",
+    "escape-string-regexp": "^1.0.2",
+    "indent-string": "^1.2.0",
+    "intersect": "~0.0.3",
+    "lodash": "3.1.0",
+    "marionette-js-logger": "0.2.1",
+    "marionette-profile-builder": "0.0.3",
+    "mkdirp": "^0.5.0",
+    "mocha": "^2.2.5",
+    "mocha-json-proxy": "~0.0.2",
+    "mozilla-runner": "^0.5.0",
+    "mz": "^1.1.0",
+    "object-assign": "^1.0.0",
+    "promise": "^6.0.1",
+    "superagent": "^0.21.0",
+    "superagent-promise": "^0.2.0",
+    "uuid": "^2.0.1",
+    "yargs": "^1.3.2"
+  },
+  "peerDependencies": {
+    "marionette-client": "1.7.x"
   }
 }
