--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphene-marionette-runner",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "author": {
     "name": "The Graphene Team"
   },
@@ -40,6 +40,6 @@
     "yargs": "^1.3.2"
   },
   "peerDependencies": {
-    "marionette-client": "^1.8.1"
+    "graphene-marionette-client": "^1.0.0"
   }
 }
